# nhisokfchat

./: .gitignore  README.md
agentcore/: .gitignore  agentcore.json
app/nhisokfchat/: main.py  pyproject.toml
app/nhisokfchat/nhis_okf/: __init__.py  agentcore_app.py  analysis.py  chat.py  cli.py  compiler.py  concepts.py  config.py  helpers.py  parquet_query.py  registry.py  retrieval.py  trends.py  verify.py
app/nhisokfchat/nhis_okf/microdata/: adult23_slice.parquet
app/nhisokfchat/nhis_okf/okf_bundle/: index.md  log.md
app/nhisokfchat/nhis_okf/okf_bundle/references/: parquet_query.md
app/nhisokfchat/nhis_okf/okf_bundle/variables/: DIBAGETC_A.md  DIBEV_A.md  DIBINS_A.md  DIBPILL_A.md  HEIGHTTC_A.md  HYPEV_A.md  HYPMED_A.md  PREDIB_A.md  TREND_diabetes_2018_2023.md  WEIGHTLBTC_A.md
docs/: SAMPLE.md
