[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhisokfchat"
version = "0.1.0"
description = "Grounded NHIS-OKF chat on Bedrock AgentCore — retrieval over the verified OKF bundle"
readme = "README.md"
requires-python = ">=3.10"
# Third-party deps AgentCore installs at deploy. Retrieval-only (sklearn/numpy/PyYAML for the
# TF-IDF retrieval over the vendored bundle) — NO pandas/pyarrow. The `nhis_okf` engine ships
# in the CodeZip beside main.py (see nhis_okf/), not pip-installed.
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "strands-agents >= 1.15.0",
    "scikit-learn >= 1.3",
    "numpy >= 1.24",
    "PyYAML >= 6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
