[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhisokfchat"
version = "0.1.0"
description = "Grounded NHIS-OKF chat on Bedrock AgentCore — two aggregate tools over the verified OKF bundle"
readme = "README.md"
requires-python = ">=3.10"
# Third-party deps AgentCore installs at deploy. Two aggregate tools: sklearn/numpy/PyYAML for
# TF-IDF retrieval over the vendored bundle, plus pandas/pyarrow for the survey-weighted
# `tool_analyze_rows` computation over the shipped slim parquet. The `nhis_okf` engine ships
# in the CodeZip beside main.py (see nhis_okf/), not pip-installed. No raw-row tool ships.
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "strands-agents >= 1.15.0",
    "scikit-learn >= 1.3",
    "numpy >= 1.24",
    "pandas >= 2.0",
    "pyarrow >= 14.0",
    "PyYAML >= 6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
